--- a/src/components/Machines/MachineDetail.css
+++ b/src/components/Machines/MachineDetail.css
@@ -15,8 +15,12 @@
 }
 
 p {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+#name-field {
+  margin-right: 5px;
 }
 
 h3 {
